<resources>
    <string name="WidgetProvider_timestamp_today">Today</string>
    <string name="WidgetProvider_timestamp_yesterday">Yesterday</string>
    <string name="WidgetProvider_timestamp_hour_ago">%s hour ago</string>
    <string name="WidgetProvider_timestamp_hours_ago">%s hours ago</string>
    <string name="WidgetProvider_timestamp_minutes_ago">%s minutes ago</string>
    <string name="WidgetProvider_timestamp_just_now">Just now</string>
    <string name="WidgetProvider_timestamp_weeks_ago">%s weeks ago</string>
    <string name="WidgetProvider_timestamp_week_ago">%s week ago</string>
    <string name="WidgetProvider_timestamp_this_week">This week</string>
    <string name="timestamp_months">%s months</string>
    <string name="timestamp_month">%s month</string>
    <string name="timestamp_weeks">%s weeks</string>
    <string name="timestamp_week">%s week</string>
    <string name="timestamp_days">%s days</string>
    <string name="timestamp_day">%s day</string>
    <string name="action_contact">Contact</string>
    <string name="installed_tab">Installed</string>
    <string name="update">Update</string>
    <string name="uninstall">Uninstall</string>
    <string name="downloading_apps">Downloading</string>
    <string name="downloaded_apps">Downloaded</string>
    <string name="screenshots">Screenshots</string>
    <string name="about">Description</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="like">Like</string>
    <string name="dont_like">Don\'t like</string>
    <string name="comments">Comments</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="add_comment">Add a comment</string>
    <string name="opinion_success">Your request was successfully submitted</string>
    <string name="comment_submitted">Your comment was successfuly submitted</string>
    <string name="no_comments">No comments yet. Be the first!</string>
    <string name="comment_see_all">See All</string>
    <string name="related_apps">Related Apps</string>
    <string name="multiversion">Multiversion</string>
    <string name="more">+ more</string>
    <string name="more_from_publisher">More from the Publisher</string>
    <string name="preparing_to_load">Preparing to load, please wait&#8230;</string>
    <string name="vote_submitted">Your vote was successfuly submitted</string>
    <string name="sort">Sort</string>
    <string name="order_popup_lst1">Most recent first </string>
    <string name="order_popup_lst2">Alphabetically </string>
    <string name="order_popup_lst2AZ">Alphabetically A-Z</string>
    <string name="order_popup_lst2ZA">Alphabetically Z-A</string>
    <string name="order_popup_lst3">Rating </string>
    <string name="order_popup_lst4">Download number </string>
    <string name="order_popup_lst5">Price</string>
    <string name="order_popup_title2">Show applications</string>
    <string name="order_popup_catg1">By category </string>
    <string name="order_popup_catg2">All applications </string>
    <string name="order_popup_title3">Adult Content</string>
    <string name="social_networks">Social Networks</string>
    <string name="find_us_on_facebook">Find us on Facebook</string>
    <string name="follow_twitter">Follow us on Twitter</string>
    <string name="loading_facebook">Loading Facebook...</string>
    <string name="loading_twitter">Loading Twitter...</string>
    <string name="new_to_aptoide">New to %s? Create a free account</string>
    <string name="forgot_passwd">Forgot password?</string>
    <string name="check_your_credentials">Check your credentials</string>
    <string name="settings_title_bar">Settings</string>
    <string name="setting_icon_download_rules">Icon Download Rules</string>
    <string name="setting_wifi">WiFi</string>
    <string name="setting_3g">3G</string>
    <string name="setting_4g">4G</string>
    <string name="setting_ethernet">Ethernet</string>
    <string name="setting_filters_title">Filters</string>
    <string name="setting_hwspecstitle">Hardware Specs</string>
    <string name="setting_hwspecssum">Hardware Info about your phone</string>
    <string name="setting_appfiltersum">Don\'t show applications that are not compatible with this device</string>
    <string name="setting_appfiltertitle">Filter Applications</string>
    <string name="setting_dont_show_mature_content">Don\'t show mature content</string>
    <string name="setting_mature_filtering">Filter Adult Content</string>
    <string name="excluded_updates_sum">Restore your excluded updates</string>
    <string name="setting_schdwntitle">Scheduled Downloads</string>
    <string name="setting_schdwninstallsum">Install scheduled downloads automatically when a WiFi connection is present</string>
    <string name="setting_sdk_version">SDK Version</string>
    <string name="setting_screen_size">Screen Size</string>
    <string name="setting_esgl_version">ESGL Version</string>
    <string name="screenCode">Screen code</string>
    <string name="cpuAbi">CPU</string>
    <string name="setting_schdwninstalltitle">Automatic Install</string>
    <string name="setting_clear_memory">Clear Memory</string>
    <string name="clearcontent_title">Remove data and configurations</string>
    <string name="clearcache_title">Clear cache</string>
    <string name="clear_cache_sucess">Content successfully deleted</string>
    <string name="clearcache_sum">Deletes cache (icons, screenshots) from the SD card.</string>
    <string name="clearcache_sum_jolla">Deletes cache (icons, screenshots)</string>
    <string name="clearcontent_sum">Deletes the data from the SD card.</string>
    <string name="clearcontent_sum_jolla">Deletes data</string>
    <string name="about_site">Website: </string>
    <string name="about_mail">Contact: </string>
    <string name="about_us">About us</string>
    <string name="settings_maxFileCache_sum">Set a maximum size to keep your apk files</string>
    <string name="settings_maxFileCache_title">Download File Cache (MB)</string>
    <string name="cache_using_X_mb">Using %s MB</string>
    <string name="crash_reports">Crash Reports</string>
    <string name="pref_enable_acra">Send reports</string>
    <string name="pref_acra_enabled">Check to allow send reports in order to help us improve Aptoide</string>
    <string name="pref_acra_syslog">Send system information</string>
    <string name="pref_acra_syslog_enabled">Check to allow sending information of your device in the report</string>
    <string name="pref_acra_user_email">Contact email</string>
    <string name="pref_acra_user_email_summary">We may contact you to obtain more information about errors</string>
    <string name="pref_acra_alwaysaccept">Auto-send reports</string>
    <string name="pref_acra_alwaysaccept_enabled">Check to auto-send reports on crash events</string>
    <string name="crash_reports_settings">Crash Reports Settings</string>
    <string name="store_already_added">Store already added!</string>
    <string name="dev_mode">Developer Mode</string>
    <string name="clearsearch_title">Clear search history</string>
    <string name="updating">Updating all apps</string>
    <string name="setting_auto_update_sum">Enable applications automatic update</string>
    <string name="setting_auto_update_title">Enable auto update</string>
    <string name="setting_updates">Updates</string>
    <string name="setting_updates_notification_title">Updates Notification</string>
    <string name="setting_updates_notification_sum">Show new updates notifications</string>
    <string name="clear_dwn_title">Icons</string>
    <string name="description">Description</string>
    <string name="add_store">Add Store</string>
    <string name="add">Add</string>
    <string name="new_store">Add New Store</string>
    <string name="merge_all_stores">Merge Stores</string>
    <string name="menu_context_reparse">Reload</string>
    <string name="menu_context_remove">Remove</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_reset_list">Reset</string>
    <string name="flag_this_app">Flag this app</string>
    <string name="flag">Flag</string>
    <string name="srch_hint">Search for apps...</string>
    <string name="share">Share</string>
    <string name="search_other_market">Search other market</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="no_sch_downloads">No scheduled downloads!</string>
    <string name="schDown_installselected">Install Selected</string>
    <string name="stores">Stores</string>
    <string name="insert_store_name">Insert store name:</string>
    <string name="store_name">Store Name</string>
    <string name="search_other_stores">Or search for others...</string>
    <string name="see_top_stores">See Top Stores</string>
    <string name="setcredentials">Login</string>
    <string name="rollback">Rollback</string>
    <string name="rollback_empty">No apps to rollback</string>
    <string name="rollback_installed">Installed</string>
    <string name="rollback_uninstalled">Uninstalled</string>
    <string name="rollback_updated">Updated</string>
    <string name="rollback_downgraded">Downgraded</string>
    <string name="install">Install</string>
    <string name="get_latest_version">Get Latest</string>
    <string name="get_latest_version_and_trusted">Get Latest &amp; Trusted</string>
    <string name="review">Review</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="info">Info</string>
    <string name="related">Related</string>
    <string name="advanced">Advanced</string>
    <string name="specs">Specifications</string>
    <string name="permissions">Permissions</string>
    <string name="publisher">Publisher</string>
    <string name="download_manager">Download Manager</string>
    <string name="updates_tab">Updates</string>
    <string name="home">Home</string>
    <string name="login_or_register">Login or register</string>
    <string name="rollback_sum">Revert actions</string>
    <string name="update_all">Update all</string>
    <string name="whats_new">What\'s new?</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="username_tip">Type your email</string>
    <string name="password_tip">Choose a password</string>
    <string name="add_pvt_store">Add private store</string>
    <string name="accept_terms">By signing up you are agreeing to the Aptoide Terms of Service and Content Policy for Developers</string>
    <string name="accept_oem_terms">By signing up you are agreeing to the %s Terms of Service</string>
    <string name="register">Sign Up</string>
    <string name="or">Or</string>
    <string name="showpass">Show password</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign up</string>
    <string name="logged_as">You are logged as:</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="excluded_updates">Excluded Updates</string>
    <string name="no_excluded_updates">No Excluded Updates</string>
    <string name="no_excluded_updates_selected">No Excluded Updates selected</string>
    <string name="restore_updates">Restore Updates</string>
    <string name="start_loading">Loading&#8230;</string>
    <string name="one_account_allowed">Only one account allowed</string>
    <string name="crash_text">Reinstall older versions</string>
    <string name="timeout">network connection timeout</string>
    <string name="ip_blacklisted">Blacklisted IP</string>
    <string name="apk_not_found">Apk not found</string>
    <string name="invalid_apk">Invalid apk</string>
    <string name="change_theme">Change theme</string>
    <string name="theme">Themes</string>
    <string name="schDwnBtn">Schedule Download</string>
</resources>