<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_sort"
          app:showAsAction="always"
          android:title="@string/sort">

        <menu android:id="@+id/submenugroup">
            <group android:checkableBehavior="single">
                <item android:id="@+id/date"
                      android:title="@string/order_popup_lst1"/>
                <item android:id="@+id/name"
                      android:title="@string/order_popup_lst2"/>
                <item android:id="@+id/rating"
                      android:title="@string/order_popup_lst3"/>
                <item android:id="@+id/download"
                      android:title="@string/order_popup_lst4"/>
                <item android:id="@+id/price"
                      android:title="@string/order_popup_lst5"/>
            </group>

            <item android:id="@+id/show_all"
                  android:checkable="true"
                  android:title="@string/order_popup_catg2"/>


        </menu>
    </item>

</menu>