<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroller"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/registration_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/new_to_aptoide"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        <LinearLayout
                android:id="@+id/signup_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

            <EditText
                    android:id="@+id/email_box"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                    android:id="@+id/password_box"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/password"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <CheckBox
                    android:id="@+id/show_create_passwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept_terms"
                    android:checked="false"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/signup_button_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

            <Button
                    android:id="@+id/submitCreateUser"
                    style="@style/WidgetButtonCustomGray"
                    android:onClick="signUp"
                    android:text="@string/register"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

