<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="#77000000"-->
                <!--android:paddingBottom="14dip"-->
                <!--android:paddingLeft="8dip"-->
                <!--android:paddingTop="14dip"-->
                <!--android:text="@string/add_store"-->
                <!--android:textColor="#FFFFFFFF"-->
                <!--android:textSize="18sp"/>-->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_store_name"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:id="@+id/textView" android:layout_margin="10dp"/>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/edit_store_uri"
                    android:hint="@string/name_of_the_store"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textUri"
                    android:singleLine="true"

                    android:layout_weight="0.2"/>


            <Button android:id="@+id/button_dialog_add_store"
                    style="@style/Widget.Button.Custom.Gray"
                    android:text="@string/add"
                    android:drawableLeft="@drawable/ic_accept"
                    android:drawablePadding="4dp"/>

        </LinearLayout>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@android:color/darker_gray"
              android:layout_margin="10dp"></View>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_other_stores"
                android:layout_marginLeft="10dp"/>

        <Button android:id="@+id/button_top_stores"
                style="@style/Widget.Button.Custom"
                android:layout_width="fill_parent"
                android:text="@string/see_top_stores"
                android:layout_margin="10dp" />


    </LinearLayout>

</ScrollView>