<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/app_info_scroller"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/advertisement"
            android:layout_below="@+id/apkinfoheader">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <!--<TextView android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="@android:style/TextAppearance.Large"-->
        <!--android:textColor="?attr/custom_color"-->
        <!--android:paddingBottom="5dp"-->
        <!--android:paddingLeft="5dp"-->
        <!--android:paddingRight="5dp"-->
        <!--android:paddingTop="10dp"-->
        <!--android:gravity="left"-->
        <!--android:text="@string/rate_this_app"/>-->


        <!--<RelativeLayout-->
        <!--android:id="@+id/topLayout"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->

        <!--<ImageView  android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/ic_action_important"-->
        <!--android:id="@+id/imageView" android:layout_centerVertical="true"/>-->

        <!--<TextView-->
        <!--android:id="@+id/app_likes"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--android:ellipsize="end"-->
        <!--android:maxLines="1"-->
        <!--android:paddingLeft="3dp"-->
        <!--android:singleLine="true"-->
        <!--android:text="Likes: 100 | Don't Likes: 52"-->
        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
        <!--android:layout_toRightOf="@+id/imageView"-->
        <!--android:layout_below="@+id/app_rating_label"/>-->

        <!--<TextView-->
        <!--android:id="@+id/app_comments_count"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:ellipsize="end"-->
        <!--android:maxLines="1"-->
        <!--android:paddingLeft="3dp"-->
        <!--android:singleLine="true"-->
        <!--android:text="Comments: 46"-->
        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
        <!--android:layout_toRightOf="@+id/imageView" android:layout_below="@+id/app_likes"/>-->

        <!--</RelativeLayout>-->




        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="?attr/custom_color"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:gravity="left"
                android:text="@string/review"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:hint="Insert your comment"
                android:id="@+id/editText" android:inputType="text"/>


        <Button android:id="@+id/button_add_comment"
                style="@style/custom_button_style"
                android:layout_width="fill_parent"
                android:text="@string/add_comment"
                android:layout_margin="10dp"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center">

            <Button android:id="@+id/button_like"
                    android:layout_width="fill_parent"
                    android:text="@string/like"
                    android:background="@drawable/highlight_overlay"
                    android:drawableLeft="@drawable/ic_rating_good"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_dont_like"
                    android:layout_width="fill_parent"
                    android:text="@string/dont_like"
                    android:background="@drawable/highlight_overlay"
                    android:drawableLeft="@drawable/ic_rating_bad"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"/>


        </LinearLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="?attr/custom_color"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:gravity="left"
                android:text="@string/comments"/>


        <LinearLayout
                android:id="@+id/commentContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">
        </LinearLayout>

        <Button
                android:id="@+id/more_comments"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/highlight_overlay"
                android:drawableRight="@drawable/ic_more_arrow_right"
                android:gravity="fill_vertical|right"
                android:paddingLeft="5.0sp"
                android:paddingRight="5.0sp"
                android:text="@string/comment_see_all"
                android:textColor="@android:color/darker_gray"/>



        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="?attr/custom_color"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:gravity="left"
                android:text="@string/flag_this_app"/>

        <Button android:id="@+id/button_flag"
                style="@style/custom_button_style"
                android:layout_width="fill_parent"
                android:text="@string/flag"
                android:layout_margin="10dp"/>


        <!--<fragment android:id="@+id/frag_related_apps"-->
        <!--android:name="com.astuetz.viewpager.extensions.sample.AppView$AppViewRelatedAppsFragment"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"/>-->

    </LinearLayout>
</ScrollView>

